--- a/RPG/RPG.vcxproj.filters
+++ b/RPG/RPG.vcxproj.filters
@@ -89,5 +89,11 @@
     <ClCompile Include="Npc.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="Skills.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="Items.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
