--- a/RPG/RPG.vcxproj
+++ b/RPG/RPG.vcxproj
@@ -167,11 +167,13 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="Items.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="MapGenerator.cpp" />
     <ClCompile Include="Npc.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="RPG.cpp" />
+    <ClCompile Include="Skills.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
